POM tidying and dependency updates