@@ -22,8 +22,7 @@
 	</modules>
 
 	<properties>
-		<maven.compiler.target>21</maven.compiler.target>
-		<maven.compiler.source>21</maven.compiler.source>
+		<maven.compiler.release>21</maven.compiler.release>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<jmh.version>1.37</jmh.version>
 		<junit.version>5.10.2</junit.version>
@@ -33,7 +32,6 @@
 		<!--Freeze this for reproducible builds. -->
 		<project.build.outputTimestamp>2024-02-05T16:15:24Z</project.build.outputTimestamp>
 		<argLine>
-			--illegal-access=permit
 			--add-opens=java.base/java.util=ALL-UNNAMED
 		</argLine>
 	</properties>
